<resources>
    <string name="app_name">TheCheezery</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="contraseña">Contraseña</string>
    <string name="email">E-mail</string>
    <string name="terminos">I have read and accept terms and conditions of The Cheezery</string>
    <string name="signin">SIGN IN</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

</resources>