<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/hello" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseña"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkTerminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminos" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF00CC"
            android:text="@string/signin"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>